--- a/.ebextensions/app.config
+++ b/.ebextensions/app.config
@@ -1,10 +1,10 @@
 option_settings:
   aws:elasticbeanstalk:application:environment:
     PARSE_MOUNT: "/parse"
-    APP_ID: "ReplaceWithAppID"
-    MASTER_KEY: "ReplaceWithMasterKey"
-    DATABASE_URI: "ReplaceWithDatabaseURI"
+    APP_ID: "myAppID"
+    MASTER_KEY: "myMasterKey"
+    DATABASE_URI: "mongodb://heroku_326g3hd6:bkg110g1mpqdenk4rod95ueu45@ds051848.mlab.com:51848/heroku_326g3hd6"
     NODE_ENV: "production"
-    SERVER_URL: "http://myappname.elasticbeanstalk.com/parse"
+    SERVER_URL:  "https://parse-server-newapp.herokuapp.com/parse"
   aws:elasticbeanstalk:container:nodejs:
     NodeCommand: "npm start"
